run sh, partial