@@ -7,8 +7,6 @@ SRC_DIR=$ROOT_DIR/src/main/java
 TARGET_DIR=$ROOT_DIR/my_build/main
 CLASSPATH=$CLASSPATH:$TARGET_DIR
 
-java --enable-preview \
--cp $CLASSPATH \
-net.codetojoy.Runner
+java -cp $CLASSPATH net.codetojoy.Runner
 
 echo "run complete"
